--- a/src/styles/notion-color.css
+++ b/src/styles/notion-color.css
@@ -102,3 +102,7 @@
   color: rgb(28, 56, 41);
   background: rgb(255, 226, 221) !important;
 }
+.tag.brown2 {
+  color: rgb(28, 56, 41);
+  background: rgb(255, 216, 161) !important;
+}
