--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -17,7 +17,7 @@ import ReadMoreLink from '../../components/ReadMoreLink.astro'
 import Pagination from '../../components/Pagination.astro'
 import BlogPostsLink from '../../components/BlogPostsLink.astro'
 import BlogTagsLink from '../../components/BlogTagsLink.astro'
-import styles from '../styles/blog.module.css'
+import styles from '../../styles/blog.module.css'
 
 const [posts, rankedPosts, tags, numberOfPages] = await Promise.all([
   getPosts(NUMBER_OF_POSTS_PER_PAGE),
