--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,19 @@ import { getAllBlocksByBlockId } from '../lib/notion/client.ts'
 import Layout from '../layouts/Layout.astro'
 import NotionBlocks from '../components/NotionBlocks.astro'
 
+
 const blocks = await getAllBlocksByBlockId(INDEX_PAGE_ID)
 ---
 
 <Layout>
-  <div slot="main">
-    <NotionBlocks blocks={blocks} isRoot={true} />
-  </div>
-
-  <div slot="aside"></div>
-</Layout>
+    <div slot="main">
+      <NotionBlocks blocks={blocks} isRoot={true} />
+    </div>
+  
+    <!-- <script>
+        var styleElm = document.createElement('style');
+        styleElm.innerText = 'aside { display: none; }';
+        document.getElementsByTagName('head').item(0).appendChild(styleElm);
+        </script> -->
+   <div slot="aside">
+  </Layout>
