--- a/src/pages/posts/tag/[tag].astro
+++ b/src/pages/posts/tag/[tag].astro
@@ -45,16 +45,16 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
         <span class={`tag ${currentTag.color}`}>{tag}</span>
       </div>
     </header>
-
+<div  style="display: flex; flex-wrap: wrap;">
     {
       posts.length === 0 ? (
         <NoContents contents={posts} />
       ) : (
         posts.map((post) => (
-          <div class={styles.post} key={post.Slug}>
+          <div  style="flex: 25%; box-sizing: border-box; padding: 10px;" class={styles.post} key={post.Slug}>
             <PostDate post={post} />
             <PostTags post={post} />
-            <PostTitle post={post} />
+            <!-- <PostTitle post={post} /> -->
             <PostFeaturedImage post={post} />
             <PostExcerpt post={post} />
             <ReadMoreLink post={post} />
@@ -62,7 +62,7 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
         ))
       )
     }
-
+</div>
     <footer>
       <Pagination tag={tag} currentPage={1} numberOfPages={numberOfPages} />
     </footer>
