--- a/src/components/notion-blocks/Heading1.astro
+++ b/src/components/notion-blocks/Heading1.astro
@@ -18,13 +18,13 @@ const id = buildHeadingId(block.Heading1)
   block.Heading1.IsToggleable ? (
     <details class="toggle">
       <summary>
-        <a href={`#${id}`} id={id}>
+        <!-- <a href={`#${id}`} id={id}>  元々の文章-->
           <h3>
             {block.Heading1.RichTexts.map((richText: interfaces.RichText) => (
               <RichText richText={richText} />
             ))}
           </h3>
-        </a>
+        <!-- </a> 元々の文章 -->
       </summary>
       <div>
         {block.Heading1.Children && (
