--- a/src/components/notion-blocks/Heading2.astro
+++ b/src/components/notion-blocks/Heading2.astro
@@ -18,13 +18,13 @@ const id = buildHeadingId(block.Heading2)
   block.Heading2.IsToggleable ? (
     <details class="toggle">
       <summary>
-        <a href={`#${id}`} id={id}>
+        <!-- <a href={`#${id}`} id={id}> -->
           <h4>
             {block.Heading2.RichTexts.map((richText: interfaces.RichText) => (
               <RichText richText={richText} />
             ))}
           </h4>
-        </a>
+          <!-- </a> -->
       </summary>
       <div>
         {block.Heading2.Children && (
@@ -68,7 +68,11 @@ const id = buildHeadingId(block.Heading2)
     cursor: pointer;
   }
 
-  .toggle > summary > a {
+ <!-- .toggle > summary > a {
+    display: inline;
+  } -->
+
+  .toggle > summary > h4 {
     display: inline;
   }
 
