--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,10 @@ const blocks = await getAllBlocksByBlockId(INDEX_PAGE_ID)
       <NotionBlocks blocks={blocks} isRoot={true} />
     </div>
   
-    <!-- <script>
+    <script>
         var styleElm = document.createElement('style');
         styleElm.innerText = 'aside { display: none; }';
         document.getElementsByTagName('head').item(0).appendChild(styleElm);
-        </script> -->
+    </script>
    <div slot="aside">
   </Layout>
