--- a/src/pages/posts/tag/[tag].astro
+++ b/src/pages/posts/tag/[tag].astro
@@ -41,6 +41,11 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
 <Layout title={`Posts in ${tag}`} path={`/posts/tag/${tag}`}>
   <div slot="main" class={styles.main}>
     <header>
+      <div class="navorigin">
+        <a href="../../../posts/cv" class="nava">CV</a>
+        <a href="../../../posts/exhibition" class="nava">EXHIBITION</a>
+        <a href="../../../posts/contact" class="nava">CONTACT</a>
+      </div>
       <div class="tag-container">
         <span class={`tag ${currentTag.color}`}>{tag}</span>
       </div>
@@ -51,9 +56,9 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
         <NoContents contents={posts} />
       ) : (
         posts.map((post) => (
-          <div  style="flex: 25%; box-sizing: border-box; padding: 10px;" class={styles.post} key={post.Slug}>
-            <PostDate post={post} />
-            <PostTags post={post} />
+          <div  style="flex-basis: 25%; box-sizing: border-box; padding: 10px; margin:0 0;" class={styles.post} key={post.Slug}>
+            <!-- <PostDate post={post} /> -->
+            <!-- <PostTags post={post} /> -->
             <!-- <PostTitle post={post} /> -->
             <PostFeaturedImage post={post} />
             <PostExcerpt post={post} />
@@ -71,12 +76,17 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
   <div slot="aside" class={styles.aside}>
     <BlogPostsLink heading="Recommended" posts={rankedPosts} />
     <BlogTagsLink heading="Categories" tags={tags} />
+    <div class="navaside">
+      <a href="../../../posts/cv" class="nava">CV</a>
+      <a href="../../../posts/exhibition" class="nava">EXHIBITION</a>
+      <a href="../../../posts/contact" class="nava">CONTACT</a>
+      </div>
   </div>
 </Layout>
 
 <style>
   .tag-container {
-    margin: 0;
+    margin: 20px 0 0 10px;
     line-height: 1.3;
     font-size: 1.2rem;
     font-weight: normal;
