--- a/src/components/notion-blocks/Paragraph.astro
+++ b/src/components/notion-blocks/Paragraph.astro
@@ -31,5 +31,7 @@ const { block, headings } = Astro.props
     margin: 0.3rem 0;
     font-size: 1rem;
     min-height: 1.8rem;
+    background-color: transparent;
+    color: #222;
   }
 </style>
