--- a/src/styles/notion-color.css
+++ b/src/styles/notion-color.css
@@ -88,7 +88,7 @@
 }
 .tag.blue {
   color: rgb(28, 56, 41);
-  background: rgb(211, 229, 239) !important;
+  background: rgb(181 230 241) !important;
 }
 .tag.purple {
   color: rgb(28, 56, 41);
