--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -161,7 +161,7 @@ if (database.Icon && database.Icon.Type === 'file') {
 
 <style>
   .container {
-    min-height: 100vh;
+    min-height: 100%;
   }
 
   .container > div {
