--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -160,6 +160,7 @@ if (database.Icon && database.Icon.Type === 'file') {
 </html>
 
 <style>
+  *{outline: 2px solid red;}
   .container {
     min-height: 100%;
   }
