--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -164,12 +164,6 @@ if (database.Icon && database.Icon.Type === 'file') {
   .container {
     min-height: 100vh;
   }
-  @media (max-width: 640px) {
-    .container {
-    width: 95% ;
-  }
-  }
-
   .container > div {
     display: flex;
     max-width: 1280px;
@@ -338,6 +332,11 @@ if (database.Icon && database.Icon.Type === 'file') {
 
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
+  }
+  @media (max-width: 640px) {
+    body {
+    min-height: 95vh;
+    }
   }
 
   figure {
