--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -335,7 +335,7 @@ if (database.Icon && database.Icon.Type === 'file') {
   }
   @media (max-width: 640px) {
     body {
-    min-height: 95vh;
+    width: 95%;
     }
   }
 
