--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -161,6 +161,9 @@ if (database.Icon && database.Icon.Type === 'file') {
 
 <style>
   *{outline: 2px solid red;}
+  * {
+    box-sizing: border-box;
+}
   .container {
     min-height: 100vh;
   }
