--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -170,6 +170,8 @@ if (database.Icon && database.Icon.Type === 'file') {
   @media (max-width: 640px) {
     .container {
       display: block;
+      max-width: 1280px;
+      margin: 0 auto;
     }
   }
   .container > div {
