--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -347,6 +347,7 @@ if (database.Icon && database.Icon.Type === 'file') {
   @media (max-width: 640px) {
     body {
       width: 90%;
+      margin: 0;
     }
   }
   @media (max-width: 640px) {
