--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -130,10 +130,10 @@ if (database.Icon && database.Icon.Type === 'file') {
 
             <footer>
               <div>
-                <div style="margin-bottom: 10px;">
+                <!-- <div style="margin-bottom: 10px;">
                   <span style="background-color: white; height:34px; margin: 5px;"><a href="https://www.facebook.com/funaki.daisuke" target="_blank"><i class="fa fa-facebook-square fa-2x" style="color:#707070;"></i></a></span>
                   <span style="background-color: white; height:34px; margin: 5px;"><a href="https://www.instagram.com/daisuke_funaki/" target="_blank"><i class="fa fa-instagram fa-2x" style="color:#707070;"></i></a></span>
-                </div>
+                </div> -->
                 <span>&copy;2008-2024 FUNAKI Daisuke.<br />FUNAKI Daisuke ART works is Powered by&nbsp;</span>
                 <a href="https://github.com/otoyo/astro-notion-blog"
                   >astro-notion-blog</a
@@ -166,14 +166,6 @@ if (database.Icon && database.Icon.Type === 'file') {
 }
   .container {
     min-height: 100vh;
-  }
-  @media (max-width: 640px) {
-    .container {
-      display: block;
-      max-width: 1280px;
-      margin: 0 auto;
-      width: 80%;
-    }
   }
   .container > div {
     display: flex;
@@ -343,12 +335,6 @@ if (database.Icon && database.Icon.Type === 'file') {
 
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
-  }
-  @media (max-width: 640px) {
-    body {
-      width: 90%;
-      margin: 0;
-    }
   }
   @media (max-width: 640px) {
     h1 {
