--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -280,6 +280,7 @@ if (database.Icon && database.Icon.Type === 'file') {
 </style>
 
 <style is:global>
+  *{outline: 2px solid red;}
   :root {
     --gap-quarter: 0.25rem;
     --gap-half: 0.5rem;
