--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -452,7 +452,7 @@ if (database.Icon && database.Icon.Type === 'file') {
   }
   div.navorigin {
       display: block;
-      width: 400px;
+      width: 100%;
       margin-top: 20px;
     }
     @media (min-width: 640px) {
