--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -125,9 +125,9 @@ if (database.Icon && database.Icon.Type === 'file') {
                   }
                 </a>
               </h1>
-              <div class="description">
+              <!-- <div class="description">
                 {database.Description}
-              </div>
+              </div> -->
             </header>
 
             <slot name="main" />
@@ -138,7 +138,7 @@ if (database.Icon && database.Icon.Type === 'file') {
                   <span style="background-color: white; height:34px; margin: 5px;"><a href="https://www.facebook.com/funaki.daisuke" target="_blank"><i class="fa fa-facebook-square fa-2x" style="color:#707070;"></i></a></span>
                   <span style="background-color: white; height:34px; margin: 5px;"><a href="https://www.instagram.com/daisuke_funaki/" target="_blank"><i class="fa fa-instagram fa-2x" style="color:#707070;"></i></a></span>
                 </div>
-                <span>&copy;2008-2024 FUNAKI Daisuke.<br />FUNAKI Daisuke ART works is Powered by&nbsp;</span>
+                <span>&copy;2008-2024 FUNAKI Daisuke=舩木大輔.<br />FUNAKI Daisuke ART works is Powered by&nbsp;</span>
                 <a href="https://github.com/otoyo/astro-notion-blog"
                   >astro-notion-blog</a
                 >
