--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,18 @@ const blocks = await getAllBlocksByBlockId(INDEX_PAGE_ID)
     </div>
   
     <script>
-        var styleElm = document.createElement('style');
+      document.addEventListener("DOMContentLoaded", function() {
+    // 指定のURLの場合にだけ実行
+    if (window.location.href === "https://funakidaisuke.work/") {
+        let aside = document.querySelector("aside");
+        if (aside) {
+            aside.style.display = "none";
+        }
+    }
+});
+        /* var styleElm = document.createElement('style');
         styleElm.innerText = 'aside { display: none; }';
-        document.getElementsByTagName('head').item(0).appendChild(styleElm);
+        document.getElementsByTagName('head').item(0).appendChild(styleElm); */
     </script>
    <div slot="aside"></div>
   </Layout>
