--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { INDEX_PAGE_ID } from '../server-constants.ts'
 import { getAllBlocksByBlockId } from '../lib/notion/client.ts'
-import Layout from '../layouts/Layout2.astro'
+import Layout from '../layouts/Layout.astro'
 import NotionBlocks from '../components/NotionBlocks.astro'
 
 
