--- a/src/pages/posts/tag/[tag].astro
+++ b/src/pages/posts/tag/[tag].astro
@@ -48,6 +48,7 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
       </div>
       <div class="tag-container">
         <span class={`tag ${currentTag.color}`}>{tag}</span>
+        {page}/{numberOfPages}
       </div>
     </header>
 <div  style="display: flex; flex-wrap: wrap;">
