--- a/src/pages/posts/tag/[tag].astro
+++ b/src/pages/posts/tag/[tag].astro
@@ -41,11 +41,6 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
 <Layout title={`Posts in ${tag}`} path={`/posts/tag/${tag}`}>
   <div slot="main" class={styles.main}>
     <header>
-      <div class="navorigin">
-        <a href="../../../posts/cv" class="nava">CV</a>
-        <a href="../../../posts/exhibition" class="nava">EXHIBITION</a>
-        <a href="../../../posts/contact" class="nava">CONTACT</a>
-      </div>
       <div class="tag-container">
         <span class={`tag ${currentTag.color}`}>{tag}</span>
       </div>
@@ -86,7 +81,7 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
 
 <style>
   .tag-container {
-    margin: 20px 0 0 10px;
+    margin: 0;
     line-height: 1.3;
     font-size: 1.2rem;
     font-weight: normal;
